@@ -1,5 +1,8 @@
 2007-12-23  Titus Brown  <t@iorich.caltech.edu>
 
+	* Updated license information => MIT in all files, along
+	  with Web link and copyright (Will Maier)
+
 	* Updated tests to work with nose > 0.9.x.
 
 2007-12-04  Titus Brown  <t@iorich.caltech.edu>
